tests/lean/487.hlean.expected.out
487.hlean:18:56: error: unsolved subgoals
A : Type,
B : Type,
f : A → B,
g : B → A,
ε : Π (b : B), f (g b) = b,
b b' : B
⊢ (ε b) ⁻¹ ⬝ refl (f (g b)) ⬝ ε b = refl b
487.hlean:19:0: error: failed to add declaration 'foo' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  λ (A : Type) (B : Type) (f : …) (g : …) (ε : …) (b b' : B),
    is_retraction.mk … ?M_1
